Changed from Timer to Timeline in login view, which prevented proper shutdown. Code optimization.